fix: jagged animations on mobile?

--- a/components/Back/Back.module.scss
+++ b/components/Back/Back.module.scss
@@ -25,6 +25,7 @@
     font-size: 2.5rem;
     font-weight: 700;
     margin: 0;
+    word-break: break-all;
     padding: 0 1rem;
     color: var(--clr-accent-peachy);
   }
