--- a/components/EntryExpanded/EntryExpanded.module.scss
+++ b/components/EntryExpanded/EntryExpanded.module.scss
@@ -22,6 +22,7 @@
     max-width: 80%;
     font-weight: 700;
     line-height: 120%;
+    word-break: break-all;
   }
   .label {
     font-size: 0.75rem;
