--- a/components/Viewer/Viewer.module.scss
+++ b/components/Viewer/Viewer.module.scss
@@ -2,6 +2,7 @@
   min-height: 100vh;
   padding: 1rem;
   position: relative;
+  overflow-x: hidden;
 }
 
 .progress {
